@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.7
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix crash that could occur in some cases in multiplayer
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.6
 Date: 2021-08-03
